Added database connection

--- a/AGI/src/main/resources/application.properties
+++ b/AGI/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 quarkus.http.port=8081
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=example
+quarkus.datasource.password=example
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/example
+
+
+quarkus.hibernate-orm.database.generation=update
