--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,6 @@ coverage.xml
 .ropeproject
 
 # Django stuff:
-*.log
 *.pot
 
 # Sphinx documentation
@@ -71,7 +70,6 @@ hs_err_pid*
 
 # JavaScript/React
 logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -94,4 +92,39 @@ typings/
 .node_repl_history
 *.tgz
 .yarn-integrity
+
+# Gradle
+.gradle/
+
+# Eclipse
+.classpath
+.settings/
+
+# IntelliJ
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode
+.factorypath
+
+# OSX
+.DS_Store
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# Local environment
 .env
+
+# Plugin directory
+/.quarkus/cli/plugins/
