--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,7 @@ docs/_build/
 
 # Java/Spring Boot
 *.class
-*.log
+
 *.ctxt
 .mtj.tmp/
 *.jar
@@ -71,7 +71,7 @@ hs_err_pid*
 
 # JavaScript/React
 logs
-*.log
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -95,3 +95,39 @@ typings/
 *.tgz
 .yarn-integrity
 .env
+/.quarkus/cli/plugins/
+
+
+# Gradle
+.gradle/
+
+
+# Eclipse
+
+.classpath
+.settings/
+
+
+# IntelliJ
+
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode
+.factorypath
+
+# OSX
+.DS_Store
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
