added cors filter and adjusted method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,6 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/example
 
 quarkus.hibernate-orm.database.generation=update
 
-
+quarkus.http.cors=true
 
 quarkus.rest-client."ai.client.AiModelClient".url=http://localhost:9000
