changed method header

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,9 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/example
 quarkus.hibernate-orm.database.generation=update
 
 quarkus.http.cors=true
+quarkus.http.cors.methods=*
+quarkus.http.cors.origins=*
+quarkus.http.cors.headers=*
+
 
 quarkus.rest-client."ai.client.AiModelClient".url=http://localhost:8000
