fixed cors error, adjusted methods and added logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,12 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/example
 quarkus.hibernate-orm.database.generation=update
 
 
+quarkus.http.cors=true
+//Grants access to the specified origin. Wildcards can be used. If not set, CORS is somehow disabled.
+quarkus.http.cors.origins=http://localhost:8000,http://localhost:4200
+
+
 quarkus.http.cors.methods=*
-quarkus.http.cors.origins=*
 quarkus.http.cors.headers=*
 
 
