--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-# Development related test or config files from development folder
-development/*
+# Projecspecific contents go here
 
-# Yaml config files
+
+# Local environment
+.env
+
+# Yaml
 *.yaml
 
-# Pycharm IDE stuff
-.idea
-.idea/workspace.xml
+# SQLite database files
+*.db
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -44,24 +46,9 @@ coverage.xml
 # Translations
 *.mo
 
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-
-# Rope
-.ropeproject
-
-# Django stuff:
-*.log
-*.pot
-
-# Sphinx documentation
-docs/_build/
-
-# Java/Spring Boot
+# Java / Spring Boot
 *.class
-
+*.log
 *.ctxt
 .mtj.tmp/
 *.jar
@@ -69,9 +56,8 @@ docs/_build/
 *.ear
 hs_err_pid*
 
-# JavaScript/React
+# JavaScript / React
 logs
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -94,32 +80,12 @@ typings/
 .node_repl_history
 *.tgz
 .yarn-integrity
-.env
-/.quarkus/cli/plugins/
-
 
 # Gradle
 .gradle/
 
-
-# Eclipse
-
-.classpath
-.settings/
-
-
-# IntelliJ
-
-*.ipr
-*.iml
-*.iws
-
 # NetBeans
 nb-configuration.xml
-
-# Visual Studio Code
-.vscode
-.factorypath
 
 # OSX
 .DS_Store
@@ -131,3 +97,81 @@ nb-configuration.xml
 # patch
 *.orig
 *.rej
+
+# Plugin directory
+/.quarkus/cli/plugins/
+
+# STS
+.apt_generated
+.springBeans
+.sts4-cache
+
+# System files
+Thumbs.db
+
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+npm-debug.log
+yarn-error.log
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
+
+# Django stuff:
+*.pot
+
+# Sphinx documentation
+docs/_build/
+
+# IDEs and editors
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IntelliJ
+*.ipr
+*.iml
+*.iws
+
+# Pycharm
+.idea
+.idea/workspace.xml
+
+# Visual Studio
+.vscode
+.factorypath
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Eclipse
+.classpath
+.settings/
+
+# Miscellaneous
+/.angular
+/.angular/cache
+.sass-cache/
+/connect.lock
+/libpeerconnection.log
+testem.log
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
