--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=example
-quarkus.datasource.password=example
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/example
 
-
-quarkus.hibernate-orm.database.generation=update
 
 
 quarkus.http.cors=true
@@ -12,8 +6,29 @@ quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:8000,http://localhost:4200
 
 
+#http configuration
+quarkus.http.port=8083
 quarkus.http.cors.methods=*
 quarkus.http.cors.headers=*
+
+#MongoDB configuration
+quarkus.mongodb.connection-string = mongodb://localhost:28017
+%dev.quarkus.mongodb.connection-string = mongodb://localhost:28017
+%dev.quarkus.mongodb.database=message
+quarkus.mongodb.database=message
+
+#Mysql configuration
+
+quarkus.datasource.db-kind=mariadb
+quarkus.datasource.username=example
+quarkus.datasource.password=example
+quarkus.datasource.jdbc.url=jdbc:mariadb://rdb:3306/example
+quarkus.datasource.devservices.enabled=true
+%dev.quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=update
+quarkus.kafka.devservices.enabled=true
+
+
 
 
 quarkus.rest-client."ai.client.AiModelClient".url=http://localhost:8000
